--- a/src/main/resources/templates/receita.html
+++ b/src/main/resources/templates/receita.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../static/assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../static/assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Fortune | Despesas</title>
+  <title>Fortune | Receitas</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -34,9 +34,21 @@
       <div class="sidebar-wrapper" id="sidebar-wrapper">
         <ul class="nav">
           <li class="active">
-            <a href="./dashboard.html">
+            <a href="./receita">
               <i class="now-ui-icons business_money-coins"></i>
-              <p>Despesas</p>
+              <p>Receitas</p>
+            </a>
+          </li>
+          <li>
+            <a href="./investimento">
+              <i class="now-ui-icons business_briefcase-24"></i>
+              <p>Investimentos</p>
+            </a>
+          </li>
+          <li>
+            <a href="./">
+              <i class="now-ui-icons shopping_basket"></i>
+              <p>Despesa</p>
             </a>
           </li>
           <li>
@@ -97,7 +109,7 @@
           <div class="col-lg-3">
             <div class="card card-chart">
               <div class="card-header">
-                <h5 class="card-category">Despesas</h5>
+                <h5 class="card-category">Receita</h5>
                 <h4 class="card-title">Fixas</h4>
               </div>
               <div class="card-body">
@@ -109,7 +121,7 @@
           <div class="col-lg-3">
             <div class="card card-chart">
               <div class="card-header">
-                <h5 class="card-category">Despesas</h5>
+                <h5 class="card-category">Receitas</h5>
                 <h4 class="card-title">Variáveis</h4>
               </div>
               <div class="card-body">
@@ -121,7 +133,7 @@
           <div class="col-lg-3">
             <div class="card card-chart">
               <div class="card-header">
-                <h5 class="card-category">Despesas</h5>
+                <h5 class="card-category">Receita</h5>
                 <h4 class="card-title">Extraordinárias</h4>
               </div>
               <div class="card-body">
@@ -133,7 +145,7 @@
           <div class="col-lg-3">
             <div class="card card-chart">
               <div class="card-header">
-                <h5 class="card-category">Despesas</h5>
+                <h5 class="card-category">Receita</h5>
                 <h4 class="card-title">Regulares</h4>
               </div>
               <div class="card-body">
@@ -146,7 +158,7 @@
           <div class="col-md-12">
             <div class="card ">
               <div class="card-header ">
-                Cadastrar Despesa
+                Cadastrar Receita
               </div>
               <div class="card-body ">
                   <form th:action="@{/salva-despesa}" th:object="${despesa}" method="post">
@@ -180,7 +192,7 @@
                       </div>
                       <div class="col-md-2 px-3">
                         <div class="form-group">
-                          <label>Tipo Despesa</label>
+                          <label>Tipo Receita</label>
                           <select class="form-control" placeholder="Despesa" name="tipodespesa" required>
                             <option value="">Selecione</option>
                             <option value="FIXAS">FIXAS</option>
@@ -227,7 +239,7 @@
           <div class="col-md-12">
             <div class="card ">
               <div class="card-header ">
-                Lista de Despesas Fixas
+                Lista de Receita Fixas
                 <div class="table-responsive">
                   <table class="table">
                     <thead>
@@ -263,7 +275,7 @@
                       </tr>
                       <tr th:if="${despesas.despesasFixas.empty}">
                           <div class="alert alert-info mt-4">
-                            <span><b> Info - </b> Nenhuma despesa fixa cadastrada!</span>
+                            <span><b> Info - </b> Nenhuma receita fixa cadastrada!</span>
                           </div>
                       </tr>
                     </tbody>
@@ -277,7 +289,7 @@
           <div class="col-md-12">
             <div class="card ">
               <div class="card-header ">
-                Lista de Despesas Variáves
+                Lista de Receita Variáves
                 <div class="table-responsive">
                   <table class="table">
                     <thead>
@@ -313,7 +325,7 @@
                     </tr>
                     <tr th:if="${despesas.despesasVariaveis.empty}">
                       <div class="alert alert-info mt-4">
-                        <span><b> Info - </b> Nenhuma despesa variável cadastrada!</span>
+                        <span><b> Info - </b> Nenhuma receita variável cadastrada!</span>
                       </div>
                     </tr>
                     </tbody>
@@ -326,7 +338,7 @@
           <div class="col-md-12">
             <div class="card ">
               <div class="card-header ">
-                Lista de Despesas Extraordinárias
+                Lista de Receita Extraordinárias
                 <div class="table-responsive">
                   <table class="table">
                     <thead>
@@ -362,7 +374,7 @@
                     </tr>
                     <tr th:if="${despesas.despesasExtraordinarias.empty}">
                       <div class="alert alert-info mt-4">
-                        <span><b> Info - </b> Nenhuma despesa extraordinária cadastrada!</span>
+                        <span><b> Info - </b> Nenhuma receita extraordinária cadastrada!</span>
                       </div>
                     </tr>
                     </tbody>
@@ -377,7 +389,7 @@
           <div class="col-md-12">
             <div class="card ">
               <div class="card-header ">
-                Lista de Despesas Regulares
+                Lista de Receita Regulares
                 <div class="table-responsive">
                   <table class="table">
                     <thead>
@@ -413,7 +425,7 @@
                     </tr>
                     <tr th:if="${despesas.despesasRegulares.empty}">
                       <div class="alert alert-info mt-4">
-                        <span><b> Info - </b> Nenhuma despesa regular cadastrada!</span>
+                        <span><b> Info - </b> Nenhuma receita regular cadastrada!</span>
                       </div>
                     </tr>
                     </tbody>
