--- a/src/main/resources/templates/conversor.html
+++ b/src/main/resources/templates/conversor.html
@@ -4,8 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../static/assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../static/assets/img/favicon.png">
+  <link rel="icon" type="image/png" th:href="@{/assets/img/favicon.png}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Fortune | Conversor</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
@@ -91,18 +90,6 @@
             <span class="navbar-toggler-bar navbar-kebab"></span>
             <span class="navbar-toggler-bar navbar-kebab"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#administrador">
-                  <i class="now-ui-icons ui-2_settings-90"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Administrador</span>
-                  </p>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
       </nav>
       <!-- End Navbar -->
@@ -113,15 +100,15 @@
           <div class="col-md-12">
             <div class="card ">
               <div class="card-header ">
-                Converter <span></span>
+                Converter
               </div>
               <div class="card-body ">
-                <form method="post">
+                <form th:action="@{/conversor}" th:object="${conversor}" method="get">
                   <div class="row">
                     <div class="col-md-3 px-3">
                       <div class="form-group">
                         <label>Tipo Moeda</label>
-                        <select class="form-control" placeholder="Moeda" name="tipomoeda" required>
+                        <select class="form-control" placeholder="Moeda" name="moedaPrimaria" required>
                           <option value="">Selecione</option>
                           <option value="REAL">REAL</option>
                           <option value="EURO">EURO</option>
@@ -138,7 +125,7 @@
                     <div class="col-md-3 px-3">
                       <div class="form-group">
                         <label>Tipo Moeda</label>
-                        <select class="form-control" placeholder="Moeda" name="tipomoeda" required>
+                        <select class="form-control" placeholder="Moeda" name="moedaPrimaria"  disabled>
                           <option value="">Selecione</option>
                           <option value="REAL">REAL</option>
                           <option value="EURO">EURO</option>
@@ -149,13 +136,9 @@
                     <div class="col-md-3 px-3">
                       <div class="form-group">
                         <label>Valor</label>
-                        <input type="number" step="0.01" class="form-control" placeholder="Valor" name="valor" required>
+                        <input type="number" step="0.01" class="form-control" placeholder="Valor" name="valor" disabled>
                       </div>
                     </div>
-                  </div>
-                  <div class="alert alert-warning mt-4" role="alert">
-                    <b> Atenção - </b>
-                    <span th:text="${mensagem}"></span>
                   </div>
                   <div class="row">
                     <div class="col-md-2 px-3 ml-auto">
@@ -170,11 +153,34 @@
                     </div>
                     <div class="col-md-2 px-3">
                       <div class="form-group">
-                        <a th:href="@{/despesa}" class="btn btn-secondary form-control design_app" value="Limpar" style="background-color: #003e7e; color: white">Voltar</a>
+                        <a th:href="@{/despesa}" class="btn btn-secondary form-control design_app" value="Voltar" style="background-color: #003e7e; color: white">Voltar</a>
                       </div>
                     </div>
                   </div>
                 </form>
+              </div>
+            </div>
+          </div>
+
+
+            <div class="col-md-12" th:if="${conversor != null}">
+              <div class="card ">
+                <div class="card-header ">
+                  Conversão <span th:utext="${conversor.nome}"></span>
+                </div>
+                <div class="card-body">
+                  <div class="row text-center">
+                    <div class="col-md-4">
+                      <h5>Valor de Entrada: R$ <span th:utext="${conversor.valorPrimario}"></span></h5>
+                    </div>
+                    <div class="col-md-4">
+                      <h5>Valor Convertido: <span th:utext="${conversor.valorConvertidoFormatado}"></span></h5>
+                    </div>
+                    <div class="col-md-4">
+                      <h5>Sigla: <span th:utext="${conversor.sigla}"></span></h5>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
