--- a/src/main/resources/templates/despesa.html
+++ b/src/main/resources/templates/despesa.html
@@ -4,8 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../static/assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../static/assets/img/favicon.png">
+  <link rel="icon" type="image/png" th:href="@{/assets/img/favicon.png}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Fortune | Despesas</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
@@ -17,6 +16,8 @@
   <link href="../static/assets/css/now-ui-dashboard.css?v=1.5.0"  th:href="@{/assets/css/now-ui-dashboard.css}" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="../static/assets/demo/demo.css" th:href="@{/assets/demo/demo.css}" rel="stylesheet" />
+  <link href="../static/css/printable.css" th:href="@{/css/printable.css}" rel="stylesheet" />
+
 </head>
 
 <body class="">
@@ -92,15 +93,11 @@
             <span class="navbar-toggler-bar navbar-kebab"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#administrador">
-                  <i class="now-ui-icons ui-2_settings-90"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Administrador</span>
-                  </p>
-                </a>
-              </li>
+            <ul class="nav">
+              <buttom class="btn btn-primary col-md-12" onclick="printFunction()">
+                <i class="now-ui-icons files_paper mr-3"></i>
+                <p>Imprimir</p>
+              </buttom>
             </ul>
           </div>
         </div>
@@ -427,13 +424,233 @@
             </div>
           </div>
 
-
-
-
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Versão impressa -->
+  <div class="printable d-none d-print-block">
+    <div class="content">
+      <div class="row">
+        <div class="col-3">
+          <div class="card card-chart">
+            <div class="card-header">
+              <h5 class="card-category">Despesas</h5>
+              <h4 class="card-title">Fixas</h4>
+            </div>
+            <div class="card-body">
+              <h3>R$ <span th:text="${despesas.totalFixas}"></span></h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-3">
+          <div class="card card-chart">
+            <div class="card-header">
+              <h5 class="card-category">Despesas</h5>
+              <h4 class="card-title">Variáveis</h4>
+            </div>
+            <div class="card-body">
+              <h3>R$ <span th:text="${despesas.totalVariaveis}"></span></h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-3">
+          <div class="card card-chart">
+            <div class="card-header">
+              <h5 class="card-category">Despesas</h5>
+              <h4 class="card-title">Extraordinárias</h4>
+            </div>
+            <div class="card-body">
+              <h3>R$ <span th:text="${despesas.totalExtraordinarias}"></span></h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-3">
+          <div class="card card-chart">
+            <div class="card-header">
+              <h5 class="card-category">Despesas</h5>
+              <h4 class="card-title">Regulares</h4>
+            </div>
+            <div class="card-body">
+              <h3>R$ <span th:text="${despesas.totalRegulares}"></span></h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-12">
+          <div class="card ">
+            <div class="card-header ">
+              Lista de Despesas Fixas
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th scope="col">Código</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Setor</th>
+                    <th scope="col">Descrição</th>
+                    <th scope="col">Vencimento</th>
+                    <th scope="col">Valor</th>
+                    <th scope="col"></th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr  th:each="despesa : ${despesas.despesasFixas}">
+
+                    <th data-label="Código" scope="row"><span th:utext="${despesa.codigo}"></span></th>
+                    <td data-label="Nome"><span th:utext="${despesa.nome}"></span></td>
+                    <td data-label="Setor"><span th:utext="${despesa.setor}"></span></td>
+                    <td data-label="Descrição"><span th:utext="${despesa.descricao}"></span></td>
+                    <td data-label="Vencimento"><span  th:utext="${despesa.dataVencimento}"></span></td>
+                    <td data-label="Valor">R$ <span th:utext="${despesa.valor}"></span></td>
+                  </tr>
+                  <tr th:if="${despesas.despesasFixas.empty}">
+                    <div class="alert alert-info mt-4">
+                      <span><b> Info - </b> Nenhuma despesa fixa cadastrada!</span>
+                    </div>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-12">
+          <div class="card ">
+            <div class="card-header ">
+              Lista de Despesas Variáves
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th scope="col">Código</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Setor</th>
+                    <th scope="col">Descrição</th>
+                    <th scope="col">Vencimento</th>
+                    <th scope="col">Valor</th>
+                    <th scope="col"></th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr  th:each="despesa : ${despesas.despesasVariaveis}">
+
+                    <th data-label="Código" scope="row"><span th:utext="${despesa.codigo}"></span></th>
+                    <td data-label="Nome"><span th:utext="${despesa.nome}"></span></td>
+                    <td data-label="Setor"><span th:utext="${despesa.setor}"></span></td>
+                    <td data-label="Descrição"><span th:utext="${despesa.descricao}"></span></td>
+                    <td data-label="Vencimento"><span  th:utext="${despesa.dataVencimento}"></span></td>
+                    <td data-label="Valor">R$ <span th:utext="${despesa.valor}"></span></td>
+                  </tr>
+                  <tr th:if="${despesas.despesasVariaveis.empty}">
+                    <div class="alert alert-info mt-4">
+                      <span><b> Info - </b> Nenhuma despesa variável cadastrada!</span>
+                    </div>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-12">
+          <div class="card ">
+            <div class="card-header ">
+              Lista de Despesas Extraordinárias
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th scope="col">Código</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Setor</th>
+                    <th scope="col">Descrição</th>
+                    <th scope="col">Vencimento</th>
+                    <th scope="col">Valor</th>
+                    <th scope="col"></th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr  th:each="despesa : ${despesas.despesasExtraordinarias}">
+
+                    <th data-label="Código" scope="row"><span th:utext="${despesa.codigo}"></span></th>
+                    <td data-label="Nome"><span th:utext="${despesa.nome}"></span></td>
+                    <td data-label="Setor"><span th:utext="${despesa.setor}"></span></td>
+                    <td data-label="Descrição"><span th:utext="${despesa.descricao}"></span></td>
+                    <td data-label="Vencimento"><span  th:utext="${despesa.dataVencimento}"></span></td>
+                    <td data-label="Valor">R$ <span th:utext="${despesa.valor}"></span></td>
+                  </tr>
+                  <tr th:if="${despesas.despesasExtraordinarias.empty}">
+                    <div class="alert alert-info mt-4">
+                      <span><b> Info - </b> Nenhuma despesa extraordinária cadastrada!</span>
+                    </div>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="col-md-12">
+          <div class="card ">
+            <div class="card-header ">
+              Lista de Despesas Regulares
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th scope="col">Código</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Setor</th>
+                    <th scope="col">Descrição</th>
+                    <th scope="col">Vencimento</th>
+                    <th scope="col">Valor</th>
+                    <th scope="col"></th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr  th:each="despesa : ${despesas.despesasRegulares}">
+
+                    <th data-label="Código" scope="row"><span th:utext="${despesa.codigo}"></span></th>
+                    <td data-label="Nome"><span th:utext="${despesa.nome}"></span></td>
+                    <td data-label="Setor"><span th:utext="${despesa.setor}"></span></td>
+                    <td data-label="Descrição"><span th:utext="${despesa.descricao}"></span></td>
+                    <td data-label="Vencimento"><span  th:utext="${despesa.dataVencimento}"></span></td>
+                    <td data-label="Valor">R$ <span th:utext="${despesa.valor}"></span></td>
+                  </tr>
+                  <tr th:if="${despesas.despesasRegulares.empty}">
+                    <div class="alert alert-info mt-4">
+                      <span><b> Info - </b> Nenhuma despesa regular cadastrada!</span>
+                    </div>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+    </div>
+  </div>
+  <script>
+    function printFunction() {
+      window.print();
+    }
+  </script>
 
   <!--   Core JS Files   -->
   <script src="../static/assets/js/core/jquery.min.js"></script>
