--- a/src/main/resources/templates/investimento.html
+++ b/src/main/resources/templates/investimento.html
@@ -4,8 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../static/assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../static/assets/img/favicon.png">
+  <link rel="icon" type="image/png" th:href="@{/assets/img/favicon.png}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Fortune | Investimentoss</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
@@ -17,6 +16,7 @@
   <link href="../static/assets/css/now-ui-dashboard.css?v=1.5.0"  th:href="@{/assets/css/now-ui-dashboard.css}" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="../static/assets/demo/demo.css" th:href="@{/assets/demo/demo.css}" rel="stylesheet" />
+
 </head>
 
 <body class="">
@@ -152,7 +152,7 @@
             <div class="card card-chart">
               <div class="card-header">
                 <h5 class="card-category">Investimentos</h5>
-                <h4 class="card-title">Fundos Imobiliários</h4>
+                <h6 class="card-title">Fundos Imobiliários</h6>
               </div>
               <div class="card-body">
                 <h3>R$ <span th:text="${despesas.totalRegulares}"></span></h3>
