--- a/src/main/resources/templates/pages/admin/admin-funcionario.html
+++ b/src/main/resources/templates/pages/admin/admin-funcionario.html
@@ -3,7 +3,7 @@
 
 <title>Painel de Funcionários</title>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<link href="../../../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet"/>
+<link href="../../../static/css/printable.css" th:href="@{/css/index.css}" rel="stylesheet"/>
 
 <script src="https://code.jquery.com/jquery.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
