--- a/src/main/resources/templates/pages/admin/admin-tarefas.html
+++ b/src/main/resources/templates/pages/admin/admin-tarefas.html
@@ -3,7 +3,7 @@
 <head>
     <title>Painel de Tarefas</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link href="../../../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet"/>
+    <link href="../../../static/css/printable.css" th:href="@{/css/index.css}" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
