--- a/src/main/resources/templates/pages/comum/funcionario.html
+++ b/src/main/resources/templates/pages/comum/funcionario.html
@@ -2,7 +2,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/html">
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<link href="../../../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet"/>
+<link href="../../../static/css/printable.css" th:href="@{/css/index.css}" rel="stylesheet"/>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
